[tool.poetry]
name = "barnacle-hourglass"
version = "0.2.0"
description = "A collection of side-projects"
authors = ["Randall Sewell <mindaika@garbanzo.monster>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
